--- a/style.css
+++ b/style.css
@@ -76,7 +76,6 @@
 #movie{
     text-align: center;
     font-family: Arial;
-    width: 48%;
 }
 
 #movie img{
@@ -122,6 +121,12 @@ button{
     #movie{
         width: 45%;
         position: relative;
+    }
+}
+
+@media (max-height: 800px){
+    #movie img{
+        max-width: 80%;
     }
 }
 
